add power-of function to simple-calc
also had to edit Makefile to link Math library (-lm).
+ 1 or 2 'fixes' (use num_options somewhere over a static number)

--- a/homework/2014-09-04-homework-1-simple-calculator/simple-calculator/Makefile
+++ b/homework/2014-09-04-homework-1-simple-calculator/simple-calculator/Makefile
@@ -12,7 +12,9 @@ CFLAGS=-Wall
 #	-lncurses
 #		Links to the ncurses library. It has a C/C++ interface, so
 #		it should actually be totally fine using ncurses with C++.
-LFLAGS=
+#	-lm
+#		Links to math.h library (or something).
+LFLAGS=-lm
 
 # The final executable to produce.
 #	We're not making a library here or anything.
